Allow preview JDK features when they remove code (#34)
Reverses the 'no preview features in main code' rule: preview features
are used when they remove code from the library. The cost is stated in
CLAUDE.md so it is a conscious choice: preview class files require
--enable-preview from every consumer and are tied to the exact JDK
feature release, so zazr tracks one JDK at a time and rebuilds per
release. First application: Lazy implemented over StableValue (JEP 502),
ticket #34.